[tool.poetry]
name = "star_navi_social_network"
version = "0.1.0"
description = ""
authors = ["Michael <edd4599@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.3"
Flask = "^2.0.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
PyJWT = "^2.3.0"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
